<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical"

    app:cardCornerRadius="10dp"
    tools:ignore="ExtraText">


    <!--    Horizontal Linear Layout for Last Updated Time-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!--        fetched last updated time-->
        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>


    <!--    Vertical Linear Layout for Details of individual state-->
    <LinearLayout
        android:id="@+id/myLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="8dp">


        <!--        Name of state-->
        <TextView
            android:id="@+id/stateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <!--    Horizontal Linear Layout for Death cases-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--        fetched total death count-->
            <TextView
                android:id="@+id/death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <!--        fetched death count for today-->
            <TextView
                android:id="@+id/todayDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/active"
                android:textSize="15sp" />

        </LinearLayout>


        <!--    Horizontal Linear Layout for Active cases-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--        fetched total active count-->
            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <!--        fetched active count for today-->
            <TextView
                android:id="@+id/todayActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/active"
                android:textSize="15sp" />

        </LinearLayout>


        <!--    Horizontal Linear Layout for Recovered Cases-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--            fetched total Recovered count-->
            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <!--          fetched recovered count for today-->
            <TextView
                android:id="@+id/todayRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/active"
                android:textSize="15sp" />

        </LinearLayout>


        <!--    Horizontal Linear Layout for Total Confirmed Cases-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--            fetched total confirmed count-->
            <TextView
                android:id="@+id/confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>